--- a/app/src/main/res/layout/activity_add_delete.xml
+++ b/app/src/main/res/layout/activity_add_delete.xml
@@ -55,7 +55,8 @@
         android:layout_alignStart="@+id/job_text"
         android:layout_below="@+id/job_text"
         android:onClick="clickOnAdd"
-        android:text="Add" />
+        android:text="Add"
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/delete_button"
@@ -66,5 +67,5 @@
         android:layout_below="@+id/add_button"
         android:onClick="clickOnDelete"
         android:text="Delete"
-        android:visibility="gone" />
+        android:visibility="visible" />
 </RelativeLayout>
